--- a/memories-service/src/main/resources/application.yaml
+++ b/memories-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   config:
-    import: optional:file:.env
+    import: optional:file:../.env
   application:
    name: memories-service
   rabbitmq:
