fix2 .env files

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     image: rabbitmq:3-management
     container_name: memoryCode-RabbitMQ
     env_file:
-      - ../.env
+      - .env
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
-      RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_VHOST}
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_DEFAULT_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_DEFAULT_PASS}
+      RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_DEFAULT_VHOST}
     ports:
       - 5672:5672
       - 15672:15672
