--- a/yandexgpt-service/src/main/resources/application.yaml
+++ b/yandexgpt-service/src/main/resources/application.yaml
@@ -15,6 +15,6 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: false
-    register-with-eureka: false
+    register-with-eureka: true
 server:
   port: 8101
