--- a/docker/.env.for-docker
+++ b/docker/.env.for-docker
@@ -1,3 +1,7 @@
 RABBITMQ_DEFAULT_USER=
 RABBITMQ_DEFAULT_PASS=
 RABBITMQ_DEFAULT_VHOST=
+#Database
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
