--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -13,6 +13,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: false
-    register-with-eureka: true
+    register-with-eureka: false
 server:
   port: 8109
+
