--- a/memories_service/DockerFile
+++ b/memories_service/DockerFile
@@ -1,7 +1,5 @@
 FROM python:3.11
-WORKDIR /code
-COPY ./requirements.txt /code/requirements.txt
-
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
-COPY ./app /code/app
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+WORKDIR /memories-service
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+COPY . .
