--- a/discovery-service/src/main/resources/application.yaml
+++ b/discovery-service/src/main/resources/application.yaml
@@ -4,11 +4,8 @@ spring:
 eureka:
   client:
     service-url:
-        defaultZone: http://localhost:8761/eureka
+        defaultZone: http://${DISCOVERY_HOST}:${DISCOVERY_PORT}/eureka
     fetch-registry: false
     register-with-eureka: false
-  instance:
-    ip-address: true
-    hostname: localhost
 server:
   port: 8761
