--- a/user-service/src/main/resources/application.yaml
+++ b/user-service/src/main/resources/application.yaml
@@ -11,9 +11,9 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
-    fetch-registry: false
-    register-with-eureka: false
+      defaultZone: http://${DISCOVERY_HOST}:${DISCOVERY_PORT}/eureka
+    fetch-registry: true
+    register-with-eureka: true
 server:
   port: 8109
 
