--- a/yandexgpt-service/src/main/resources/application.yaml
+++ b/yandexgpt-service/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://${DISCOVERY_HOST}:${DISCOVERY_PORT}/eureka
     fetch-registry: false
     register-with-eureka: true
 server:
