--- a/docker/.env.for-docker
+++ b/docker/.env.for-docker
@@ -5,3 +5,6 @@ RABBITMQ_DEFAULT_VHOST=
 POSTGRES_USERNAME=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+# Endpoints
+YANDEXGPT_SERVICE_URL=
+USER_SERVICE_URL=
