--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -73,3 +73,16 @@ services:
       - .env
     ports:
       - 8101:8101
+  memories-service:
+    container_name: memoryCode-memories-service
+    networks:
+      - app-network
+    depends_on:
+      - discovery-service
+    env_file:
+      - .env
+    ports:
+      - 8000:8000
+    restart: always
+    build: .
+    command: sh -c "python main.py"
