--- a/docker/.env.for-docker
+++ b/docker/.env.for-docker
@@ -5,6 +5,11 @@ RABBITMQ_DEFAULT_VHOST=
 POSTGRES_USERNAME=
 POSTGRES_PASSWORD=
 POSTGRES_DATABASE=
+POSTGRES_PORT=
+POSTGRES_HOST=
+#Director
+DISCOVERY_HOST=
+DISCOVERY_PORT=
 # Endpoints
 YANDEXGPT_SERVICE_URL=
 USER_SERVICE_URL=
