--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -74,15 +74,13 @@ services:
     ports:
       - 8101:8101
   memories-service:
+    image: alexscorp/alexrep:s5
     container_name: memoryCode-memories-service
     networks:
       - app-network
-    depends_on:
-      - discovery-service
     env_file:
       - .env
     ports:
       - 8000:8000
     restart: always
-    build: .
     command: sh -c "python main.py"
