--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -80,6 +80,8 @@ services:
       - app-network
     env_file:
       - .env
+    depends_on:
+      - discovery-service
     ports:
       - 8000:8000
     restart: always
