--- a/yandexgpt-service/src/main/resources/application.yaml
+++ b/yandexgpt-service/src/main/resources/application.yaml
@@ -14,8 +14,8 @@ server:
 yandex:
   gpt:
     api:
-      indignity-key: b1g5og37bgh1ghh2s2qc
-      key: AQVN1J4sCxYR98rj-tVppyp6gXQthbdmYvmgtO7a
+      indignity-key:
+      key:
 springdoc:
   swagger-ui:
     path: /swagger-doc/swagger-ui.html
